# advent-2021

./: Cargo.toml  README.md  new_day.sh  timing.sh
.github/workflows/: rust.yml
src/: aoc01.rs  console.rs  euclid.rs  euclid3d.rs  lib.rs  main.rs  parsing.rs  pathfinding.rs  terminal.rs
